--- a/package.json
+++ b/package.json
@@ -1,7 +1,22 @@
 {
+  "name": "educative-master-js-interview",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "type": "module",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
     "@types/benchmark": "^2.1.2",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
     "benchmark": "^2.1.4",
-    "microtime": "^3.1.1"
+    "eslint": "^8.28.0",
+    "microtime": "^3.1.1",
+    "typescript": "^4.9.3"
   }
 }
