chore: add build and types folders to .gitignore, update typescript configuration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "allowUnreachableCode": false,
     "alwaysStrict": true,
     "declaration": true,
-    "declarationDir": "types",
+    "declarationDir": "./types",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
@@ -14,9 +14,9 @@
     ],
     "module": "esnext",
     "moduleResolution": "node",
+    "outDir": "./build",
     "noImplicitAny": false,
     "noImplicitReturns": true,
-    "outDir": "./dist",
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "sourceMap": true,
