refactor: :wrench: add typescript folder to tsconfig exclude. remove typescript folder from gitignore

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,9 +26,9 @@
   "exclude": [
     "node_modules",
     "tests",
-    "./types/**/*",
-    "./dist/**/*",
-    "./typescript"
+    "./types",
+    "./dist",
+    "./src/typescript"
   ],
   "include": [
     "**/*.ts"
